[package]
name = "plonky2_u32"
description = "u32 gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mir-protocol/plonky2-u32"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40" }
itertools = { version = "0.10.0" }
num = { version = "0.4" }
plonky2 = { version = ">=0.1.2, <0.1.4", features = ["std"] }

[dev-dependencies]
plonky2 = { version = ">=0.1.2, <0.1.4", features = ["gate_testing"] }
rand = { version = "0.8.4", features = ["getrandom"] }
